--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="application-name" content="My App">
     <meta name="theme-color" content="#48bb78"/>	
-    <title>Nishanth</title>
+    <title>Nishanth Dev</title>
   </head>
   <body>
     <div id="root"></div>
